[package]
name = "uxp-wasm-rust-sample"
description = "UXP Sample for using Rust and WebAssembly in Photoshop"
version = "0.1.0"
categories = ["wasm", "uxp"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.52"
wasm-bindgen = "0.2.75"
web-sys = { version = "0.3.52", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.25"
